# bedrock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: bedrock.yml  manual-publish.yml
benches/: falcon.rs  xwing.rs
src/: error.rs  eth_falcon.rs  falcon.rs  hhd.rs  kem.rs  lib.rs  macros.rs  mayo.rs  ml_dsa.rs  slh_dsa.rs  xwing.rs
src/eth_falcon/: key_gen.rs
src/falcon/: eth_falcon.rs
src/hhd/: ARCHITECTURE.md  README.md  bip85.rs  keys.rs  mnemonic.rs  mod.rs  signatures.rs  slip10.rs
src/hhd/keys/: ecdsa.rs  error.rs  falcon.rs  mldsa.rs  mod.rs  slhdsa.rs
tests/: falcon_rust.rs  fn_dsa.rs  pqcrypto.rs  test.rs
