[package]
categories = ["cryptography"]
description = "Tectonic's common cryptography library"
documentation = "https://docs.rs/bedrock"
edition = "2021"
keywords = ["post-quantum"]
name = "bedrock"
readme = "README.md"
repository = "https://github.com/tectonic-labs/bedrock"
version = "0.1.0"

[features]
default = ["eth_falcon", "falcon", "mceliece", "ml-dsa", "ml-kem", "decp", "encp", "kgen", "sign", "vrfy", "hhd"]
eth_falcon = ["falcon", "rand_chacha", "rand_core", "fn-dsa-comm/eth_falcon", "fn-dsa-sign?/eth_falcon", "fn-dsa-vrfy?/eth_falcon", "zeroize"]
hhd = ["zeroize", "bip32", "hmac", "sha2", "tiny-bip39", "kgen", "falcon", "rand_core", "ml-dsa"]
falcon = ["oqs/falcon"]
mceliece = ["oqs/classic_mceliece"]
ml-dsa = ["oqs/ml_dsa"]
ml-kem = ["oqs/ml_kem"]
kgen = ["fn-dsa-comm", "fn-dsa-kgen"]
encp = []
decp = []
sign = ["fn-dsa-comm", "fn-dsa-sign"]
vrfy = ["fn-dsa-comm", "fn-dsa-vrfy"]

[dependencies]
hex = "0.4"
rand_chacha = { version = "0.9", optional = true }
rand_core = { version = "0.9", features = ["std"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serdect = "0.4"
thiserror = "2.0"
zeroize = { version = "1.8", optional = true }

bip32 = { version = "0.5.3", features = ["std", "secp256k1"], optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
tiny-bip39 = { version = "2.0.0", optional = true }

[dependencies.oqs]
git = "https://github.com/tectonic-labs/liboqs-rust"
tag = "tectonic/0.11.0-rc1"
default-features = false
features = [
    "serde",
    "zeroize",
]
optional = true

[dependencies.fn-dsa-comm]
git = "https://github.com/tectonic-labs/rust-fn-dsa"
tag = "tectonic/0.3.0"
optional = true

[dependencies.fn-dsa-kgen]
git = "https://github.com/tectonic-labs/rust-fn-dsa"
tag = "tectonic/0.3.0"
optional = true

[dependencies.fn-dsa-sign]
git = "https://github.com/tectonic-labs/rust-fn-dsa"
tag = "tectonic/0.3.0"
optional = true

[dependencies.fn-dsa-vrfy]
git = "https://github.com/tectonic-labs/rust-fn-dsa"
tag = "tectonic/0.3.0"
optional = true

[dev-dependencies.fn-dsa]
git = "https://github.com/tectonic-labs/rust-fn-dsa"
tag = "tectonic/0.3.0"

[dev-dependencies]
falcon-rust = "0.1.2"
postcard = {  version = "1.0", features = ["use-std"] }
rand = "0.9"
rand_chacha = "0.9"
rstest = "0.26"
serde_json = "1.0"

[dev-dependencies.rand_core06]
package = "rand_core"
version = "0.6"

[dev-dependencies.rand_chacha06]
package = "rand_chacha"
version = "0.3"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"

[lints.clippy]
mod_module_files = "deny"
unwrap_used = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]