[package]
authors = ["Tectonic Labs Developers"]
categories = ["cryptography"]
description = "Tectonic's common cryptography library"
documentation = "https://docs.rs/tectonic-bedrock"
edition = "2021"
homepage = "https://github.com/tectonic-labs/bedrock"
keywords = ["post-quantum", "crypto", "signature", "kem"]
license = "MIT OR Apache-2.0"
name = "tectonic-bedrock"
readme = "README.md"
repository = "https://github.com/tectonic-labs/bedrock"
version = "0.1.0-dev.0"

[features]
default = ["eth_falcon", "falcon", "mceliece", "ml-dsa", "ml-kem", "decp", "encp", "kgen", "sign", "vrfy", "hhd", "xwing"]
eth_falcon = ["falcon", "rand_chacha", "rand_core", "fn-dsa-comm/eth_falcon", "fn-dsa-sign?/eth_falcon", "fn-dsa-vrfy?/eth_falcon", "zeroize"]
hhd = ["zeroize", "bip32", "hmac", "sha2", "tiny-bip39", "rand_core"]
falcon = ["oqs/falcon"]
mceliece = ["oqs/classic_mceliece"]
ml-dsa = ["oqs/ml_dsa"]
ml-kem = ["oqs/ml_kem"]
kgen = ["fn-dsa-comm", "fn-dsa-kgen", "rand_core?/getrandom"]
encp = []
decp = []
sign = ["fn-dsa-comm", "fn-dsa-sign"]
vrfy = ["fn-dsa-comm", "fn-dsa-vrfy"]
xwing = ["rand_core", "sha3", "x25519-dalek"]

[dependencies]
hex = "0.4"
rand_chacha = { version = "0.3", optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
sha3 = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serdect = "0.4"
thiserror = "2.0"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"], optional = true }
zeroize = { version = "1.8", optional = true }

bip32 = { version = "0.5.3", features = ["std", "secp256k1"], optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
tiny-bip39 = { version = "2.0.0", optional = true }

[dependencies.oqs]
package = "tectonic-oqs"
version = "0.11.0"
default-features = false
features = [
    "serde",
    "zeroize",
]
optional = true

[dependencies.fn-dsa-comm]
package = "tectonic-fn-dsa-comm"
version = "0.3.0"
optional = true

[dependencies.fn-dsa-kgen]
package = "tectonic-fn-dsa-kgen"
version = "0.3.0"
optional = true

[dependencies.fn-dsa-sign]
package = "tectonic-fn-dsa-sign"
version = "0.3.0"
optional = true

[dependencies.fn-dsa-vrfy]
package = "tectonic-fn-dsa-vrfy"
version = "0.3.0"
optional = true

[dev-dependencies.fn-dsa]
package = "tectonic-fn-dsa"
version = "0.3.0"

[dev-dependencies]
criterion = "0.8"
hex = { version = "0.4", features = ["serde"] }
falcon-rust = "0.1.2"
postcard = {  version = "1.0", features = ["use-std"] }
rand = "0.8"
rand_chacha = "0.3"
rstest = "0.26"
serde_json = "1.0"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"

[lints.clippy]
mod_module_files = "deny"
unwrap_used = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "xwing"
path = "benches/xwing.rs"
required-features = ["mceliece", "ml-kem", "xwing"]
